--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "description": "",
    "private": true,
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
+      "test": "jest",
       "start": "webpack serve --open",
       "build": "webpack"
    },
@@ -12,8 +12,13 @@
    "author": "",
    "license": "ISC",
    "devDependencies": {
+      "@babel/plugin-transform-modules-commonjs": "^7.24.8",
+      "@babel/preset-env": "^7.25.4",
+      "babel-jest": "^29.7.0",
+      "babel-loader": "^9.2.1",
       "css-loader": "^6.10.0",
       "html-webpack-plugin": "^5.6.0",
+      "jest": "^29.7.0",
       "style-loader": "^3.3.4",
       "webpack": "^5.90.3",
       "webpack-cli": "^5.1.4",
